syntax = "proto3";

package post;

service PostService {
  rpc Create (CreatePostRequest) returns (PostProto) {}
  rpc UserFeed (Empty) returns (PostProtoList) {}
  rpc GetComments (FindByPostIdRequest) returns (CommentProtoList) {}
  rpc FindByUserId (FindByUserIdRequest) returns (PostProtoList) {}
  rpc Comment (CreateCommentRequest) returns (CommentProto) {}
  rpc Like (LikeRequest) returns (PostProto) {}
  rpc Dislike (DislikeRequest) returns (PostProto) {}
}

message Empty {
}

message FindByUserIdRequest {
  string userId = 1;
}

message FindByPostIdRequest {
  string postId = 1;
}

message CommentProtoList {
  repeated CommentProto comments=1;
}

message PostProtoList {
  repeated PostProto posts=1;
}

message CreatePostRequest {
  string title = 1;
  string description = 2;
  string body = 3;
}

message CreateCommentRequest {
  string postId = 1;
  string body = 2;
}

message LikeRequest {
  string postId = 1;
}

message DislikeRequest {
  string postId = 1;
}

message CommentProto {
  string body = 1;
  string postId = 2;
  string authorUsername = 3;
}

message PostProto {
  string id = 1;
  string title = 2;
  string description = 3;
  string body = 4;
  string authorUsername = 5;
  int32 likeCount = 6;
  bool liked = 7;
  int32 dislikeCount = 8;
  bool disliked = 9;
  repeated CommentProto comments=10;
}